# s4core

./: .clippy.toml  .dockerignore  .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  REDB-TO-FJALL-GEMINI-3.1-PRO.md  docker-compose-cluster-dev.yml  docker-compose-cluster.yml  docker-compose-single-node.yml  docker-compose.yml  haproxy.cfg  rustfmt.toml
.agents/: terminal.md
.github/workflows/: ci.yml
docs/: _index.md
docs/01-getting-started/: _index.md  configuration.md  installation.md  quick-start.md
docs/02-architecture/: _index.md  data-flow.md  high-level-design.md  storage-engine.md  workspace-structure.md
docs/03-s3-api/: _index.md  authentication.md  bucket-operations.md  multipart-upload.md  object-operations.md
docs/04-features/: _index.md  compaction.md  cors.md  deduplication.md  federation.md  lifecycle-policies.md  object-lock.md  tls.md  versioning.md
docs/05-iam/: _index.md  admin-api.md  roles-and-permissions.md  s3-credentials.md
docs/06-monitoring/: _index.md  prometheus-metrics.md  stats-api.md
docs/07-web-console/: _index.md  features.md  setup.md
docs/08-deployment/: _index.md  clustering.md  docker.md  production.md
docs/09-development/: _index.md  building.md  code-standards.md  contributing.md
ee/: README.md  docker-compose-dev.yml  haproxy-ee.cfg
ee/s4-ee/: Cargo.toml
ee/s4-ee-license/: Cargo.toml
ee/s4-ee-license/src/: capabilities.rs  error.rs  lib.rs  license.rs
ee/s4-ee-license/tests/: license_gen_cli.rs
ee/s4-ee/src/: lib.rs
s4-api/: Cargo.toml
s4-api/src/: lib.rs  multipart_store.rs  server.rs
s4-api/src/auth/: credentials.rs  mod.rs  signature_v2.rs  signature_v4.rs
s4-api/src/handlers/: admin.rs  admin_cluster.rs  bucket.rs  bucket_config.rs  mod.rs  multipart.rs  object.rs  object_lock.rs  select.rs  stats.rs
s4-api/src/middleware/: admin_auth.rs  auth.rs  aws_chunked.rs  iam_auth.rs  logging.rs  metrics.rs  mod.rs
s4-api/src/s3/: errors.rs  mod.rs  xml.rs
s4-api/tests/: api_integration.rs  cors_integration.rs  iam_integration.rs  lifecycle_integration.rs  metrics_integration.rs  object_lock_integration.rs  select_integration.rs  signature_v2_integration.rs  signature_v4_integration.rs  versioning_integration.rs
s4-cluster/: Cargo.toml  build.rs
s4-cluster/proto/: s4_cluster.proto
s4-cluster/src/: capability.rs  cluster_metrics.rs  config.rs  conflict.rs  error.rs  gossip.rs  idempotency.rs  identity.rs  lib.rs  lifecycle.rs  protocol.rs  traits.rs
s4-cluster/src/clock/: dvv.rs  hlc.rs  mod.rs
s4-cluster/src/coordinator/: list.rs  mod.rs  read.rs  write.rs
s4-cluster/src/dedup/: distributed.rs  mod.rs
s4-cluster/src/gc/: mod.rs  service.rs  tombstone.rs  zombie_guard.rs
s4-cluster/src/hints/: mod.rs
s4-cluster/src/placement/: bucket_placement.rs  hash_ring.rs  mod.rs  router.rs
s4-cluster/src/repair/: anti_entropy.rs  frontier.rs  merkle.rs  mod.rs  read_repair.rs
s4-cluster/src/replica/: mod.rs  multipart.rs  read.rs  write.rs
s4-cluster/src/rpc/: client.rs  mod.rs  server.rs  tls.rs
s4-cluster/src/scrubber/: deep_verify.rs  metrics.rs  mod.rs
s4-compactor/: Cargo.toml
s4-compactor/src/: compactor.rs  lib.rs  main.rs  scrubber.rs
s4-compactor/tests/: compaction_integration.rs
s4-core/: Cargo.toml
s4-core/benches/: concurrent_reads.rs
s4-core/src/: error.rs  lib.rs
s4-core/src/storage/: bitcask.rs  crash_tests.rs  dedup.rs  engine.rs  index.rs  journal.rs  mod.rs  placement.rs  recovery.rs  version_index.rs  versioning.rs  volume.rs
s4-core/src/types/: blob.rs  composite.rs  metadata.rs  mod.rs  object_lock.rs  versioning.rs
s4-core/tests/: compaction_e2e.rs  crash_recovery.rs  deduplication.rs  streaming_put.rs
s4-features/: Cargo.toml
s4-features/src/: lib.rs
s4-features/src/atomic/: batch.rs  directory.rs  mod.rs
s4-features/src/cors/: mod.rs
s4-features/src/iam/: auth.rs  error.rs  jwt.rs  mod.rs  models.rs  password.rs  permissions.rs  policy.rs  storage.rs
s4-features/src/lifecycle/: evaluation.rs  mod.rs  xml.rs
s4-features/src/metadata/: extended.rs  mod.rs  search.rs
s4-features/src/object_lock/: mod.rs  xml.rs
s4-select/: Cargo.toml
s4-select/src/: config.rs  engine.rs  error.rs  eval.rs  lib.rs  multi_object.rs  planner.rs  request.rs  response.rs  sql_validator.rs
s4-select/src/formats/: csv.rs  json.rs  mod.rs
s4-select/src/functions/: aggregate.rs  conditional.rs  conversion.rs  date.rs  mod.rs  string.rs
s4-server/: Cargo.toml
s4-server/src/: app.rs  cluster_bootstrap.rs  compaction_worker.rs  config.rs  edition.rs  lib.rs  lifecycle_worker.rs  main.rs  multipart_cleanup_worker.rs
s4-server/tests/: tls_integration.rs
s4core-github/: LICENSE
