# Copyright 2026 S4Core team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "s4-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "sync"] }
redb = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }
crc32fast = "1.3"
md-5 = "0.10"
hex = "0.4"
base64 = { version = "0.21", features = ["alloc"] }
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[lints]
workspace = true
