[package]
name = "s4-ee-license"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license = "Elastic-2.0"
description = "S4Core Enterprise Edition — license validation"

[[bin]]
name = "license-gen"
path = "src/bin/license_gen.rs"
required-features = ["gen"]

[features]
default = []
gen = ["ed25519-dalek/rand_core", "dep:rand"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# Ed25519 signature verification
ed25519-dalek = { workspace = true }
base64 = { workspace = true }

# Key generation (only for license-gen binary)
rand = { version = "0.8", optional = true }

[dev-dependencies]
tempfile = "3"
